--- a/client/embed.html
+++ b/client/embed.html
@@ -35,7 +35,7 @@ event bro_done() {
 
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script src="trybro_embded.js"></script>
+<script src="trybro_embed.js"></script>
 <script type="text/javascript">
 $(function() {
     $(".bro_source").trybro();
