--- a/manager/static/trybro.html
+++ b/manager/static/trybro.html
@@ -2,11 +2,11 @@
 <div class="row">
     <div class="col-md-4 col-md-push-8">
         <label for="example">Load example </label>
-        <select id="example" ng-model="example_name" ng-options="e for e in examples">
+        <select id="example" ng-model="example_name" ng-options="e for e in examples" ng-change="example_changed()">
         </select>
         <div ng-bind-html="example.html"></div>
-        <a ng-show="example.pred" class="btn btn-primary" href="/#/trybro?example={{example.pred}}">Previous</a>
-        <a ng-show="example.succ" class="btn btn-primary" href="/#/trybro?example={{example.succ}}">Next</a>
+        <a ng-show="example.pred" class="btn btn-primary" ui-sref="trybro({example:example.pred})">Previous</a>
+        <a ng-show="example.succ" class="btn btn-primary" ui-sref="trybro({example:example.succ})">Next</a>
     </div>
     <div class="col-md-8 col-md-pull-4">
         <ul class="nav nav-tabs">
