--- a/manager/web-ui/public/index.html
+++ b/manager/web-ui/public/index.html
@@ -16,6 +16,8 @@
     <title>Try Bro</title>
   </head>
   <body>
+    <iframe frameborder='0' height='100' marginheight='0' marginwidth='0' scrolling='no' src='https://www.bro.org/frames/header.html' width='100%'>
+    </iframe>
     <div id="root"></div>
     <!--
       This HTML file is a template.
