--- a/manager/web-ui/public/index.html
+++ b/manager/web-ui/public/index.html
@@ -13,10 +13,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Try Bro</title>
+    <title>Try Zeek</title>
   </head>
   <body>
-    <iframe frameborder='0' height='100' marginheight='0' marginwidth='0' scrolling='no' src='https://www.bro.org/frames/header.html' width='100%'>
+    <iframe frameborder='0' height='100' marginheight='0' marginwidth='0' scrolling='no' src='https://www.zeek.org/frames/header.html' width='100%'>
     </iframe>
     <div id="root"></div>
     <!--
